--- a/src/main/java/it/polimi/se2019/ui/Map1.fxml
+++ b/src/main/java/it/polimi/se2019/ui/Map1.fxml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.effect.ColorInput?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="394.0" prefWidth="514.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Map1Controller">
-   <ImageView fitHeight="393.0" fitWidth="592.0" layoutX="4.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
-      <Image url="@../../../../../../../images/mapone.jpg" />
+<GridPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Map1Controller">
+   <Button onAction="#showMap" text="Show Map" />
+   <ImageView fx:id="imageview" fitHeight="377.0" fitWidth="529.0" pickOnBounds="true"
+              preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <Image url="@../../../../../../../images/mapone.jpg"/>
    </ImageView>
-   <Button layoutY="146.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="74.0" text="select" textOverrun="CLIP">
-      <effect>
-         <ColorInput />
-      </effect>
-   </Button>
-   
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
 
-   <Button layoutX="3.0" layoutY="205.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="68.0" text="Select">
-      <effect>
-         <ColorInput />
-      </effect>
-   </Button>
-   <Button layoutX="3.0" layoutY="261.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="68.0" text="Select">
-      <effect>
-         <ColorInput />
-      </effect>
-   </Button>
-</AnchorPane>
+</GridPane>
