--- a/src/main/java/it/polimi/se2019/ui/Map1.fxml
+++ b/src/main/java/it/polimi/se2019/ui/Map1.fxml
@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<GridPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Map1Controller">
-   <Button onAction="#showMap" text="Show Map" />
-   <ImageView fx:id="imageview" fitHeight="377.0" fitWidth="529.0" pickOnBounds="true"
-              preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
-      <Image url="@../../../../../../../images/mapone.jpg"/>
-   </ImageView>
-   <columnConstraints>
-      <ColumnConstraints />
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
-
-</GridPane>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
+   <children>
+      <Label layoutX="286.0" layoutY="192.0" />
+      <ImageView fitHeight="400.0" fitWidth="700.0" layoutX="1.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../images/mappa.jpg" />
+         </image>
+      </ImageView>
+   </children>
+</AnchorPane>
