--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -8,8 +8,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <GridPane alignment="center" hgap="10" prefHeight="300.0" prefWidth="300.0" vgap="10"
-          xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="it.polimi.se2019.ui.Controller">
+          fx:controller="it.polimi.se2019.ui.Controller"
+          xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
