--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -1,17 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.ImageInput?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
+<AnchorPane prefHeight="600.0" prefWidth="892.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
    <children>
-      <Label layoutX="286.0" layoutY="192.0" />
-      <ImageView fitHeight="600.0" fitWidth="800.0" layoutX="1.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="mappa" fitHeight="599.0" fitWidth="870.0" layoutX="1.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@mappa.jpg" />
          </image>
       </ImageView>
+      <Button layoutX="1.0" layoutY="218.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="112.0">
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+         <effect>
+            <ImageInput />
+         </effect>
+      </Button>
+      <Button layoutY="304.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="112.0" text="Button" />
+      <Button layoutX="3.0" layoutY="390.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="112.0" text="Button" />
+      <Button layoutX="691.0" layoutY="341.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="106.0" text="Button" />
+      <Button layoutX="692.0" layoutY="426.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="106.0" text="Button" />
+      <Button layoutX="691.0" layoutY="514.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="106.0" text="Button" />
+      <Button layoutX="423.0" layoutY="2.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="75.0" text="Button" />
+      <Button layoutX="510.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="75.0" text="Button" />
+      <Button layoutX="599.0" layoutY="3.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="75.0" text="Button" />
+      <Button layoutX="695.0" layoutY="157.0" mnemonicParsing="false" prefHeight="129.0" prefWidth="75.0" text="MazzoArmi" />
+      <Button layoutX="719.0" layoutY="29.0" mnemonicParsing="false" prefHeight="82.0" prefWidth="51.0" text="PU" />
    </children>
 </AnchorPane>
