--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -3,12 +3,15 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="892.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
+<AnchorPane prefHeight="821.0" prefWidth="1426.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
    <children>
       <ImageView fx:id="mappa" fitHeight="599.0" fitWidth="870.0" layoutX="1.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
          <cursor>
@@ -41,5 +44,41 @@
       <ImageView fx:id="imweaponDeck" disable="true" fitHeight="128.0" fitWidth="86.0" layoutX="695.0" layoutY="157.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="impowerupDeck" disable="true" fitHeight="83.0" fitWidth="66.0" layoutX="716.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
       </ImageView>
+      <VBox layoutX="871.0" layoutY="596.0" prefHeight="225.0" prefWidth="555.0">
+         <children>
+            <TabPane prefHeight="229.0" prefWidth="555.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="Powerup Cards">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Button layoutY="2.0" mnemonicParsing="false" prefHeight="194.0" prefWidth="151.0" text="Button" />
+                              <Button layoutX="163.0" layoutY="2.0" mnemonicParsing="false" prefHeight="195.0" prefWidth="151.0" text="Button" />
+                              <Button layoutX="327.0" layoutY="2.0" mnemonicParsing="false" prefHeight="195.0" prefWidth="151.0" text="Button" />
+                              <ImageView fx:id="imPowerupCard1" fitHeight="192.0" fitWidth="150.0" layoutX="-1.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
+                              <ImageView fx:id="imPowerupCard2" fitHeight="192.0" fitWidth="150.0" layoutX="164.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
+                              <ImageView fx:id="imPowerupCard3" fitHeight="192.0" fitWidth="150.0" layoutX="328.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+                <Tab text="Weapon Cards">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Button layoutY="3.0" mnemonicParsing="false" prefHeight="194.0" prefWidth="149.0" text="Button" />
+                              <Button layoutX="164.0" layoutY="3.0" mnemonicParsing="false" prefHeight="194.0" prefWidth="149.0" text="Button" />
+                              <Button layoutX="328.0" layoutY="4.0" mnemonicParsing="false" prefHeight="193.0" prefWidth="151.0" text="Button" />
+                              <ImageView fx:id="imWeaponCard1" fitHeight="192.0" fitWidth="150.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" />
+                              <ImageView fx:id="imWeaponCard2" fitHeight="192.0" fitWidth="150.0" layoutX="164.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+                              <ImageView fx:id="imWeaponCard3" fitHeight="192.0" fitWidth="150.0" layoutX="329.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+              </tabs>
+            </TabPane>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
