--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.effect.Blend?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -75,8 +81,40 @@
           </Tab>
         </tabs>
       </TabPane>
-      <ImageView fx:id="yourCharacter" fitHeight="177.0" fitWidth="504.0" layoutX="173.0" layoutY="556.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="173.0" AnchorPane.rightAnchor="1094.0" AnchorPane.topAnchor="556.0" />
-      <ImageView fx:id="imFirstPlayer" fitHeight="146.0" fitWidth="66.0" layoutX="3.0" layoutY="562.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="1207.0" AnchorPane.topAnchor="562.0" />
-      <ImageView fx:id="possibleActions" fitHeight="177.0" fitWidth="86.0" layoutX="85.0" layoutY="554.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="1600.0" AnchorPane.topAnchor="554.0" />
+      <ImageView fx:id="yourCharacter" fitHeight="177.0" fitWidth="504.0" layoutX="173.0" layoutY="556.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" />
+      <ImageView fx:id="possibleActions" fitHeight="159.0" fitWidth="66.0" layoutX="3.0" layoutY="549.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="1227.0" AnchorPane.topAnchor="549.0">
+         <image>
+            <Image url="@characters/actionsBlue.jpg" />
+         </image></ImageView>
+      <ImageView fx:id="imFirstPlayer" fitHeight="177.0" fitWidth="86.0" layoutX="1.0" layoutY="523.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="1.0" />
+      <Button layoutX="84.0" layoutY="576.0" mnemonicParsing="false" opacity="0.24" prefHeight="15.0" prefWidth="52.0">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <effect>
+            <Glow level="0.57" />
+         </effect></Button>
+      <Button layoutX="84.0" layoutY="605.0" mnemonicParsing="false" opacity="0.24" prefHeight="25.0" prefWidth="49.0">
+         <effect>
+            <Lighting>
+               <bumpInput>
+                  <Shadow />
+               </bumpInput>
+               <light>
+                  <Light.Distant />
+               </light>
+            </Lighting>
+         </effect></Button>
+      <Button layoutX="84.0" layoutY="634.0" mnemonicParsing="false" opacity="0.24" prefHeight="25.0" prefWidth="49.0">
+         <effect>
+            <Lighting>
+               <bumpInput>
+                  <Shadow />
+               </bumpInput>
+               <light>
+                  <Light.Distant />
+               </light>
+            </Lighting>
+         </effect></Button>
    </children>
 </AnchorPane>
