--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.effect.Blend?>
-<?import javafx.scene.effect.Glow?>
-<?import javafx.scene.effect.Light.Distant?>
-<?import javafx.scene.effect.Lighting?>
-<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -18,7 +13,7 @@
 
 <AnchorPane prefHeight="705.0" prefWidth="1378.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
    <children>
-      <ImageView fx:id="mappa" fitHeight="599.0" fitWidth="870.0" layoutX="1.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="mappa" fitHeight="599.0" fitWidth="870.0" layoutX="1.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="1.0" AnchorPane.topAnchor="1.0">
          <cursor>
             <Cursor fx:constant="DISAPPEAR" />
          </cursor></ImageView>
@@ -61,6 +56,12 @@
                         <ImageView fx:id="imPowerupCard1" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="-1.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="imPowerupCard2" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="164.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="imPowerupCard3" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="328.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
+                        <Button fx:id="bRealoadPowerup1" layoutX="111.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
+                        <Button fx:id="bDiscardPowerup1" layoutX="110.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
+                        <Button fx:id="bRealoadPowerup2" layoutX="276.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
+                        <Button fx:id="bDiscardPowerup2" layoutX="275.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
+                        <Button fx:id="bReloadPowerup3" layoutX="436.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
+                        <Button fx:id="bDiscardPowerup3" layoutX="436.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
                      </children>
                   </AnchorPane>
             </content>
@@ -75,6 +76,12 @@
                         <ImageView fx:id="imWeaponCard1" disable="true" fitHeight="192.0" fitWidth="150.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="imWeaponCard2" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="164.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="imWeaponCard3" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="329.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
+                        <Button fx:id="bReloadWeapon1" layoutX="106.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
+                        <Button fx:id="bReloadWeapon2" layoutX="270.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
+                        <Button fx:id="bReloadWeapon3" layoutX="429.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
+                        <Button fx:id="bDiscardWeapon1" layoutX="106.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
+                        <Button fx:id="bDiscardWeapon2" layoutX="269.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
+                        <Button fx:id="bDiscardWeapon3" layoutX="428.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
                      </children>
                   </AnchorPane>
             </content>
@@ -82,39 +89,46 @@
         </tabs>
       </TabPane>
       <ImageView fx:id="yourCharacter" fitHeight="177.0" fitWidth="504.0" layoutX="173.0" layoutY="556.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" />
-      <ImageView fx:id="possibleActions" fitHeight="159.0" fitWidth="66.0" layoutX="3.0" layoutY="549.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="1227.0" AnchorPane.topAnchor="549.0">
+      <ImageView fx:id="possibleActions" fitHeight="159.0" fitWidth="66.0" layoutX="95.0" layoutY="551.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="95.0" AnchorPane.rightAnchor="1233.7158660888672" AnchorPane.topAnchor="551.0">
          <image>
             <Image url="@characters/actionsBlue.jpg" />
          </image></ImageView>
-      <ImageView fx:id="imFirstPlayer" fitHeight="177.0" fitWidth="86.0" layoutX="1.0" layoutY="523.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="1.0" />
-      <Button layoutX="84.0" layoutY="576.0" mnemonicParsing="false" opacity="0.24" prefHeight="15.0" prefWidth="52.0">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <effect>
-            <Glow level="0.57" />
-         </effect></Button>
-      <Button layoutX="84.0" layoutY="605.0" mnemonicParsing="false" opacity="0.24" prefHeight="25.0" prefWidth="49.0">
-         <effect>
-            <Lighting>
-               <bumpInput>
-                  <Shadow />
-               </bumpInput>
-               <light>
-                  <Light.Distant />
-               </light>
-            </Lighting>
-         </effect></Button>
-      <Button layoutX="84.0" layoutY="634.0" mnemonicParsing="false" opacity="0.24" prefHeight="25.0" prefWidth="49.0">
-         <effect>
-            <Lighting>
-               <bumpInput>
-                  <Shadow />
-               </bumpInput>
-               <light>
-                  <Light.Distant />
-               </light>
-            </Lighting>
-         </effect></Button>
+      <ImageView fx:id="imFirstPlayer" fitHeight="177.0" fitWidth="86.0" layoutY="531.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
+      <TabPane layoutX="834.0" layoutY="21.0" prefHeight="451.0" prefWidth="543.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <tabs>
+          <Tab text="enemy">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="405.0" prefWidth="543.0">
+                     <children>
+                        <Button fx:id="enemyCharacter1" layoutX="88.0" layoutY="44.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="405.0" />
+                     </children></AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="enemy">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="enemyCharacter2" layoutX="88.0" layoutY="43.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="409.0" />
+                     </children></AnchorPane>
+            </content>
+          </Tab>
+            <Tab text="enemy">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="enemyCharacter3" layoutX="88.0" layoutY="45.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="407.0" />
+                     </children></AnchorPane>
+              </content>
+            </Tab>
+            <Tab text="enemy">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="enemyCharacter4" layoutX="88.0" layoutY="47.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="410.0" />
+                     </children></AnchorPane>
+              </content>
+            </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
