--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -44,7 +44,7 @@
       <ImageView fx:id="imweaponDeck" disable="true" fitHeight="128.0" fitWidth="86.0" layoutX="681.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="impowerupDeck" disable="true" fitHeight="83.0" fitWidth="66.0" layoutX="702.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
       </ImageView>
-      <TabPane layoutX="882.0" layoutY="474.0" prefHeight="229.0" prefWidth="511.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <TabPane layoutX="882.0" layoutY="474.0" prefHeight="229.0" prefWidth="511.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="Powerup Cards">
             <content>
@@ -56,11 +56,8 @@
                         <ImageView fx:id="imPowerupCard1" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="-1.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="imPowerupCard2" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="164.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="imPowerupCard3" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="328.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button fx:id="bRealoadPowerup1" layoutX="111.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
                         <Button fx:id="bDiscardPowerup1" layoutX="110.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
-                        <Button fx:id="bRealoadPowerup2" layoutX="276.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
                         <Button fx:id="bDiscardPowerup2" layoutX="275.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
-                        <Button fx:id="bReloadPowerup3" layoutX="436.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
                         <Button fx:id="bDiscardPowerup3" layoutX="436.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
                      </children>
                   </AnchorPane>
@@ -94,7 +91,7 @@
             <Image url="@characters/actionsBlue.jpg" />
          </image></ImageView>
       <ImageView fx:id="imFirstPlayer" fitHeight="177.0" fitWidth="86.0" layoutY="531.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
-      <TabPane layoutX="834.0" layoutY="21.0" prefHeight="451.0" prefWidth="543.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TabPane layoutX="834.0" layoutY="21.0" prefHeight="451.0" prefWidth="543.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="enemy">
             <content>
