--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -97,7 +97,12 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="405.0" prefWidth="543.0">
                      <children>
-                        <Button fx:id="enemyCharacter1" layoutX="88.0" layoutY="44.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="405.0" />
+                        <Button fx:id="enemyCharacter1" layoutX="124.0" layoutY="46.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="405.0" />
+                        <ImageView fx:id="enemy1card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy1card2" fitHeight="150.0" fitWidth="112.0" layoutX="208.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy1card3" fitHeight="150.0" fitWidth="112.0" layoutX="355.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy1First" fitHeight="128.0" fitWidth="49.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy1Actions" fitHeight="120.0" fitWidth="51.0" layoutX="61.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true" />
                      </children></AnchorPane>
             </content>
           </Tab>
@@ -105,7 +110,12 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="enemyCharacter2" layoutX="88.0" layoutY="43.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="409.0" />
+                        <Button fx:id="enemyCharacter2" layoutX="120.0" layoutY="43.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="409.0" />
+                        <ImageView fx:id="enemy2card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy2card2" fitHeight="150.0" fitWidth="112.0" layoutX="208.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy2card3" fitHeight="150.0" fitWidth="112.0" layoutX="355.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy2First" fitHeight="128.0" fitWidth="49.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy2Actions" fitHeight="120.0" fitWidth="51.0" layoutX="65.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true" />
                      </children></AnchorPane>
             </content>
           </Tab>
@@ -113,7 +123,12 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="enemyCharacter3" layoutX="88.0" layoutY="45.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="407.0" />
+                        <Button fx:id="enemyCharacter3" layoutX="122.0" layoutY="45.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="407.0" />
+                        <ImageView fx:id="enemy3card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy3card2" fitHeight="150.0" fitWidth="112.0" layoutX="208.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy3card3" fitHeight="150.0" fitWidth="112.0" layoutX="355.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy3First" fitHeight="128.0" fitWidth="49.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy3Actions" fitHeight="120.0" fitWidth="51.0" layoutX="58.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" />
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -121,7 +136,12 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="enemyCharacter4" layoutX="88.0" layoutY="47.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="410.0" />
+                        <Button fx:id="enemyCharacter4" layoutX="119.0" layoutY="47.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="410.0" />
+                        <ImageView fx:id="enemy4card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy4card2" fitHeight="150.0" fitWidth="112.0" layoutX="208.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy4card3" fitHeight="150.0" fitWidth="112.0" layoutX="355.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy4First" fitHeight="128.0" fitWidth="49.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy4Actions" fitHeight="120.0" fitWidth="51.0" layoutX="57.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true" />
                      </children></AnchorPane>
               </content>
             </Tab>
