--- a/src/main/resources/chooseMap.fxml
+++ b/src/main/resources/chooseMap.fxml
@@ -1,18 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
+<AnchorPane prefHeight="396.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
    <children>
-      <RadioButton fx:id="rbmap1" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="53.0" prefWidth="130.0" text="mappa 1">
+      <RadioButton fx:id="rbmap1" layoutX="79.0" layoutY="165.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="77.0" text="mappa 1">
          <toggleGroup>
             <ToggleGroup fx:id="mappaGroup" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton fx:id="rbmap2" layoutX="14.0" layoutY="74.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="53.0" prefWidth="120.0" text="mappa 2" toggleGroup="$mappaGroup" />
+      <RadioButton fx:id="rbmap2" layoutX="326.0" layoutY="165.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="77.0" text="mappa 2" toggleGroup="$mappaGroup" />
+      <RadioButton fx:id="rbmap3" layoutX="82.0" layoutY="365.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="71.0" text="mappa 3" toggleGroup="$mappaGroup" />
+      <RadioButton fx:id="rbmap4" layoutX="327.0" layoutY="365.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="77.0" text="mappa 4" toggleGroup="$mappaGroup" />
+      <ImageView fx:id="mappa1prev" fitHeight="151.0" fitWidth="200.0" layoutX="17.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@mappa.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="mappa2prev" fitHeight="151.0" fitWidth="211.0" layoutX="242.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@mappa2.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="mappa3prev" fitHeight="152.0" fitWidth="219.0" layoutX="17.0" layoutY="203.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@mappa3.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="mappa4prev" fitHeight="177.0" fitWidth="200.0" layoutX="242.0" layoutY="203.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@mappa4.jpg" />
+         </image>
+      </ImageView>
 
    </children>
 </AnchorPane>
