--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -17,7 +17,7 @@
          <cursor>
             <Cursor fx:constant="DISAPPEAR" />
          </cursor></ImageView>
-      <Button fx:id="redWeapon1" layoutX="1.0" layoutY="218.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="112.0">
+      <Button fx:id="redWeapon1" layoutX="1.0" layoutY="218.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="110.0">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
@@ -25,14 +25,14 @@
             <Blend />
          </effect>
       </Button>
-      <Button fx:id="redweapon2" layoutY="304.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="112.0" />
-      <Button fx:id="redWeapon3" layoutX="3.0" layoutY="390.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="112.0" />
-      <Button fx:id="yellowWeapon1" layoutX="691.0" layoutY="341.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="106.0" />
-      <Button fx:id="yellowWeapon2" layoutX="692.0" layoutY="426.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="106.0" />
-      <Button fx:id="yellowWeapon3" layoutX="691.0" layoutY="514.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="106.0" />
+      <Button fx:id="redweapon2" layoutX="1.0" layoutY="304.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="110.0" />
+      <Button fx:id="redWeapon3" layoutX="1.0" layoutY="390.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="110.0" />
+      <Button fx:id="yellowWeapon1" layoutX="691.0" layoutY="341.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="110.0" />
+      <Button fx:id="yellowWeapon2" layoutX="691.0" layoutY="426.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="110.0" />
+      <Button fx:id="yellowWeapon3" layoutX="691.0" layoutY="514.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="110.0" />
       <Button fx:id="blueWeapon1" layoutX="423.0" layoutY="2.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="75.0" />
-      <Button fx:id="blueWeapon2" layoutX="510.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="75.0" />
-      <Button fx:id="blueWeapon3" layoutX="599.0" layoutY="3.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="75.0" />
+      <Button fx:id="blueWeapon2" layoutX="510.0" layoutY="1.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="75.0" />
+      <Button fx:id="blueWeapon3" layoutX="599.0" layoutY="1.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="75.0" />
       <Button fx:id="weaponDeck" contentDisplay="BOTTOM" disable="true" layoutX="685.0" layoutY="147.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="78.0">
          </Button>
       <Button fx:id="powerupDeck" disable="true" layoutX="709.0" layoutY="21.0" mnemonicParsing="false" prefHeight="72.0" prefWidth="51.0" />
@@ -259,9 +259,14 @@
          <image>
             <Image url="@ammo/AD_ammo_044.png" />
          </image></ImageView>
-      <ImageView fx:id="imRedWeapon1" fitHeight="64.0" fitWidth="106.0" layoutX="3.0" layoutY="224.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="imRedWeapon2" fitHeight="64.0" fitWidth="106.0" layoutX="6.0" layoutY="309.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="imRedWeapon21" fitHeight="64.0" fitWidth="106.0" layoutX="3.0" layoutY="395.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="imBlueWeapon1" fitHeight="104.0" fitWidth="66.0" layoutX="428.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imRedWeapon1" fitHeight="72.0" fitWidth="106.0" layoutX="3.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imRedWeapon2" fitHeight="72.0" fitWidth="106.0" layoutX="3.0" layoutY="306.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imRedWeapon3" fitHeight="72.0" fitWidth="106.0" layoutX="3.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imBlueWeapon1" fitHeight="106.0" fitWidth="72.0" layoutX="425.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imBlueWeapon2" fitHeight="106.0" fitWidth="72.0" layoutX="511.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imBlueWeapon3" fitHeight="106.0" fitWidth="72.0" layoutX="601.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imYellowWeapon1" fitHeight="72.0" fitWidth="106.0" layoutX="693.0" layoutY="343.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imYellowWeapon2" fitHeight="72.0" fitWidth="106.0" layoutX="693.0" layoutY="429.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imYellowWeapon3" fitHeight="72.0" fitWidth="106.0" layoutX="693.0" layoutY="516.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
